<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".InstructionsFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/main_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_titile"
        android:textSize="32sp"
        android:fontFamily="@font/baloo"
        android:layout_centerInParent="true"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/main_text"
        android:layout_centerHorizontal="true"
        android:text="@string/instructions_sub_title"/>

    <TextView
        android:id="@+id/secondary_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions_text"
        android:gravity="center"
        android:lineSpacingExtra="12sp"
        android:layout_below="@id/desc_text"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/start_now_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="24dp"
        android:background="@drawable/solid_bg_accent"
        android:text="@string/start_now"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>