<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".AddShoeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:weightSum="6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/shoe_name" />

        <EditText
            android:id="@+id/shoe_name_edit_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="4"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/edit_text_bg_stroke"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:weightSum="6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/company" />

        <EditText
            android:id="@+id/company_edit_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="4"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/edit_text_bg_stroke"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:weightSum="6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/shoe_size" />

        <EditText
            android:id="@+id/shoe_size_edit_text"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="4"
            android:inputType="numberDecimal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/edit_text_bg_stroke"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:weightSum="6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/description" />

        <EditText
            android:id="@+id/description_edit_text"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="4"
            android:paddingTop="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="top"
            android:background="@drawable/edit_text_bg_stroke"/>

    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="24dp"
        android:background="@drawable/solid_bg_accent"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>